--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ average-weights-testing/mnist-data2.ipynb
 average-weights-testing/mnist-data2/saved_model.pb
 average-weights-testing/mnist-data2/variables/variables.data-00000-of-00001
 average-weights-testing/mnist-data2/variables/variables.index
+datasets/*
