--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,23 @@ average-weights-testing/mnist-data2/variables/variables.index
 datasets/*
 testes/*
 jupyter-notebooks/transferlearning_weights.hdf5
+0-datasets/montgomery-shenzen/montgomery-shenzen-files.zip
+0-datasets/montgomery-shenzen/arquivos-descompactados/ChinaSet_AllFiles/*
+0-datasets/montgomery-shenzen/arquivos-descompactados/Montgomery/*
+0-datasets/nih/images_01.tar.gz
+0-datasets/nih/images_02.tar.gz
+0-datasets/nih/images_03.tar.gz
+0-datasets/nih/images_04.tar.gz
+0-datasets/nih/images_05.tar.gz
+0-datasets/nih/images_06.tar.gz
+0-datasets/nih/images_07.tar.gz
+0-datasets/nih/images_08.tar.gz
+0-datasets/nih/images_09.tar.gz
+0-datasets/nih/images_10.tar.gz
+0-datasets/nih/images_11.tar.gz
+0-datasets/nih/images_12.tar.gz
+0-datasets/nih/arquivos-descompactados/file01/images/*
+0-datasets/nih/arquivos-descompactados/file02/images/*
+0-datasets/nih/arquivos-descompactados/file03/images/*
+0-datasets/vinbigdata/vinbigdata-files.zip
+0-datasets/vinbigdata/arquivos-descompactados/vinbigdata/*
